# scratchgpt

./: .gitignore  README.md  pyproject.toml
.hooks/: pre-commit
scratchgpt/: dataloader.py  infer.py  main.py  metering.py  model_io.py
scratchgpt/tokenizer/: base_tokenizer.py  char_tokenizer.py  tiktoken.py
tests/: test_tokenizer.py
