[tool.poetry]
name = "scratchgpt"
version = "0.1.0"
description = ""
authors = ["Aleksandr Yeganov <ayeganov@gmail.com>", "Dario Cazzani <dariocazzani@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4"
tqdm = "^4.66"
types-tqdm = "^4.66"
ptflops = "^0.7"
numpy = "^2.1"
tiktoken = "^0.7"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
pytest = "^8.3"
bandit = "^1.7.7"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"
isort = "^5.13.2"
black = "^24.2.0"

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
skip_glob = [".venv"]

[tool.pylint."MESSAGES CONTROL"]
disable = ["missing-module-docstring", "missing-class-docstring"]
extension-pkg-whitelist = "pydantic"

[tool.pylint.REPORTS]
output-format = "parseable"

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.DESIGN]
max-args = 10
max-attributes = 10

[tool.black]
line-length = 120
target-version = ['py312']

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "scratchgpt.main:main"
infer = "scratchgpt.infer:main"
tiktoken = "scratchgpt.tokenizer.tiktoken:main"
